<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BookfanActivity!</string>
    <string name="app_name">Bookfan</string>

    <!-- LOGIN  -->
    <string name="login_fb_error">Neodařilo se přihlásit přes Facebook. Zkontrolujte připojení k internetu a zkuste to prosím později.</string>

    <string name="login_heading">Přihlašte se</string>
    <string name="login_email">email</string>
    <string name="login_password">heslo</string>
    <string name="login_btn">Přihlásit se</string>
    <string name="login_fb_btn">Přihlásit se pomocí Facebooku</string>
    
    <string name="login_progress">Ověřuji přihlašovací údaje...</string>
    <string name="login_failed">Zadali jste nesprávné uživatelské jméno nebo heslo.</string>
    
    <string name="login_token_error">Vaše přihlášení je neplatné, přihlašte se prosím znovu.</string>
        
    <!-- BOOKS LIST  -->
	<string name="list_no_books">Nebo přidej první knihu na tuto poličku!</string>
	<string name="list_empty_add_btn">Přidat</string>
	<string name="list_empty">Stáhni si knihy z knihovny nebo přidej první!</string>
	<string name="list_first_download_btn">Stáhnout</string>
	
	<string name="book_library_download_pending">Stahuji tvoji knihovnu do telefonu...</string>    
    <string name="book_search_pending">Hledám tvoji knížku v databázi Bookfanu...</string>
    <string name="book_not_found">Tuto knihu jsme v databázi Bookfanu bohužel nenašli...</string>
	
    <!-- BOOKS DETAIL  -->
    <string name="book_detail_add_label">Přidat do</string>
    <string name="book_detail_add_btn">Vložit</string>
    <string name="book_detail_cancel_btn">Zrušit</string>
    <string name="book_detail_more_btn">Více informací</string>
    
    <string name="book_detail_loading_tv">Hledám...</string>
    <string name="book_detail_not_found_tv">Kniha nenalezena</string>
    <string name="book_detail_add_failed">Přidání chyby se nezdařilo. Zkuste to prosím později a zkontrolujte připojení k internetu.</string>
	<string name="book_add_pending">Přidávám knihu do knihovny...</string>
	<string name="book_add_success">Kniha byla přidána do vaší knihovny</string>
	<string name="book_add_fail">Přidání knihy se bohužel nepovedlo. Zkuste to prosím později a zkontrolujte své připojení k internetu</string>
        
    <!-- TEMPORARY  -->
    <string name="book_name">Název knihy</string>
    <string name="book_author">Autor knihy</string>
    <string name="book_isbn">ISBN</string>
    
    <string name="menu_add">Přidat</string>
    <string name="menu_refresh">Obnovit</string>
    
    <string name="menu_shelf">Polička</string>
    <string name="menu_shelf_read">Četl jsem</string>
    <string name="menu_shelf_toread">Chci číst</string>
    <string name="menu_shelf_old">Do bazaru</string>
    <string name="menu_shelf_home">Mám ji doma</string>
    <string name="menu_shelf_reading">Právě čtu</string>
    
    <string name="menu_logout">Odhlásit se</string>
    
    <string-array name="shelf_array">
        <item>@string/menu_shelf_read</item>
        <item>@string/menu_shelf_toread</item>
        <item>@string/menu_shelf_home</item>
        <item>@string/menu_shelf_reading</item>
    </string-array>
</resources>