<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_add"
          android:icon="@drawable/ic_action_add"
          android:title="@string/menu_add"
          android:showAsAction="always"/>
    
    <item android:id="@+id/menu_refresh"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/menu_refresh"
          android:showAsAction="always" />
    
    <item 
        android:id="@+id/menu_shelf" 
        android:icon="@drawable/ic_btn_shelf"
        android:title="@string/menu_shelf"
        android:showAsAction="always" >
		<menu>
			<group android:id="@+id/menu_shelf_group"
				android:checkableBehavior="single">
				
				<item 
				    android:id="@+id/menu_shelf_read" 
				    android:title="@string/menu_shelf_read" 
				    android:checked="true" />

				<item 
				    android:id="@+id/menu_shelf_toread" 
				    android:title="@string/menu_shelf_toread" />
				
				<item 
				    android:id="@+id/menu_shelf_home" 
				    android:title="@string/menu_shelf_home" />
				
				<item 
				    android:id="@+id/menu_shelf_reading" 
				    android:title="@string/menu_shelf_reading" />
			</group>
		</menu>
	</item>
    
    <item android:id="@+id/menu_logout"
          android:title="@string/menu_logout"
          android:showAsAction="never" />
</menu>